--- a/JsonParsing/JsonParsing/Base.lproj/Main.storyboard
+++ b/JsonParsing/JsonParsing/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                         <rect key="frame" x="0.0" y="229" width="374" height="51"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </searchBar>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ioq-Qi-mVM">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ioq-Qi-mVM">
                                         <rect key="frame" x="137" y="310" width="100" height="38"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="38" id="X7y-sl-fhn"/>
@@ -53,7 +53,7 @@
                                             <color key="baseBackgroundColor" systemColor="systemPinkColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="unSearchBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6wE-0h-B4T"/>
+                                            <action selector="onSearchBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7S8-2B-z2e"/>
                                         </connections>
                                     </button>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Ub0-sn-Qgi">
