--- a/FSCalendar_practice/FSCalendar_practice/Base.lproj/Main.storyboard
+++ b/FSCalendar_practice/FSCalendar_practice/Base.lproj/Main.storyboard
@@ -17,28 +17,96 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jLe-5g-I6R" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="44" width="414" height="300"/>
+                                <rect key="frame" x="20" y="228" width="374" height="512"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="Z0r-32-x5F"/>
-                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="headerHeight">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="headerTitleColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="titleTextSize">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="subtitleTextSize">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="headerTitleTextSize">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WCN-m8-GSf">
+                                <rect key="frame" x="20" y="81" width="77" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="77" id="Vst-LM-ExY"/>
+                                    <constraint firstAttribute="height" constant="31" id="gRd-V6-dVe"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="스티커"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLQ-Z3-paT">
+                                <rect key="frame" x="350" y="81" width="44" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="My"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5iY-hS-P6D">
+                                <rect key="frame" x="120" y="157" width="174" height="31"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yx3-tY-Dsv">
+                                        <rect key="frame" x="0.0" y="0.0" width="37" height="31"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.left" catalog="system"/>
+                                        <connections>
+                                            <action selector="prevBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ahq-KP-SnJ"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsO-1H-NzT">
+                                        <rect key="frame" x="37" y="0.0" width="100" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="ISX-nW-SKU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sIz-zy-fOb">
+                                        <rect key="frame" x="137" y="0.0" width="37" height="31"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system"/>
+                                        <connections>
+                                            <action selector="nextBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KxV-w6-9AD"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jLe-5g-I6R" secondAttribute="trailing" id="JWQ-cY-in9"/>
-                            <constraint firstItem="jLe-5g-I6R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YBJ-CJ-NQh"/>
-                            <constraint firstItem="jLe-5g-I6R" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="alL-kz-O91"/>
+                            <constraint firstItem="hLQ-Z3-paT" firstAttribute="centerY" secondItem="WCN-m8-GSf" secondAttribute="centerY" id="0Qj-SB-yWt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hLQ-Z3-paT" secondAttribute="trailing" constant="20" id="99R-bB-pJM"/>
+                            <constraint firstItem="jLe-5g-I6R" firstAttribute="top" secondItem="5iY-hS-P6D" secondAttribute="bottom" constant="40" id="Chp-aB-ygY"/>
+                            <constraint firstItem="jLe-5g-I6R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ExY-6Q-hNk"/>
+                            <constraint firstItem="WCN-m8-GSf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="HnG-nW-osc"/>
+                            <constraint firstItem="jLe-5g-I6R" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-20" id="JL4-V0-ZUo"/>
+                            <constraint firstItem="5iY-hS-P6D" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="RaX-Cr-LK4"/>
+                            <constraint firstItem="WCN-m8-GSf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eYw-g1-3Ig"/>
+                            <constraint firstItem="5iY-hS-P6D" firstAttribute="top" secondItem="WCN-m8-GSf" secondAttribute="bottom" constant="45" id="g2Y-Am-oib"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jLe-5g-I6R" secondAttribute="bottom" constant="122" id="u3l-8n-AXl"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="calendar" destination="jLe-5g-I6R" id="qeZ-2d-cqE"/>
+                        <outlet property="headerLb" destination="VsO-1H-NzT" id="sM6-zN-jSM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="78"/>
+            <point key="canvasLocation" x="28.985507246376812" y="77.678571428571431"/>
         </scene>
         <!--Test View Controller-->
         <scene sceneID="db7-B7-5A0">
@@ -49,7 +117,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="97R-aK-joA">
-                                <rect key="frame" x="186" y="312" width="42" height="21"/>
+                                <rect key="frame" x="76" y="110" width="262" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -65,10 +133,39 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eDb-PL-tdA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="697" y="78"/>
+            <point key="canvasLocation" x="695.6521739130435" y="77.678571428571431"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="GGt-Lg-67s">
+            <objects>
+                <viewController id="2OI-Hu-XIC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dxb-JF-ETu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="스크린샷 2022-02-10 오후 5.34.26" translatesAutoresizingMaskIntoConstraints="NO" id="XrX-w6-a3q">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="pL9-y0-boW"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="XrX-w6-a3q" firstAttribute="top" secondItem="pL9-y0-boW" secondAttribute="top" id="2oq-uI-wUN"/>
+                            <constraint firstItem="pL9-y0-boW" firstAttribute="trailing" secondItem="XrX-w6-a3q" secondAttribute="trailing" id="ZK2-tw-DkS"/>
+                            <constraint firstItem="XrX-w6-a3q" firstAttribute="leading" secondItem="pL9-y0-boW" secondAttribute="leading" id="jNL-Sb-jCA"/>
+                            <constraint firstItem="pL9-y0-boW" firstAttribute="bottom" secondItem="XrX-w6-a3q" secondAttribute="bottom" id="rWo-DX-p8c"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QHa-fr-jnq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-775" y="78"/>
         </scene>
     </scenes>
     <resources>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
+        <image name="chevron.right" catalog="system" width="96" height="128"/>
+        <image name="스크린샷 2022-02-10 오후 5.34.26" width="524" height="938"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
